[package]
name = "axum-cognito"
version = "0.2.1"
edition = "2024"
authors = ["Roam <open-source@go-roam.co>", "Benjamin Ellis <ben@go-roam.co>"]

[dependencies]
axum = "0.8.3"
jsonwebtokens = "1.2.0"
jsonwebtokens-cognito = "0.1.1"
futures-util = "0.3.30"
http = "1.0.0"
headers = "0.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tower = "0.5.2"
thiserror = "2.0.12"
